Thu Jul 19 10:29:57 UTC 2007  Vadym Ridosh  <vridosh@prismtech.com>

        * bin/tao_other_tests.lst:
          Disabled TAO/examples/PluggableUDP/tests/Performance in single
          threaded builds.

Thu Jul 19 10:18:57 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          Disable visibility with Intel C++ 10.0, we do have some errors

Thu Jul 19 09:52:57 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-icc-common.h:
          Updated export/import macros to be used with Intel C++

        * include/makeinclude/platform_linux_icc.GNU:
          Enable visibility with Intel C++ 10.0. It results in a few
          warnings but seems to work.

        * ace/Atomic_Op.h:
          Updated define to check for Intel C++

        * ace/config-rtems.h:
          Removed reference to KCC

Thu Jul 19 07:32:57 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/SOCK_Netlink_Test.cpp:
          Added missing include

Thu Jul 19 03:00:57 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * tests/Auto_Event_Test.cpp:
        * tests/Buffer_Stream_Test.cpp:
        * tests/Bug_1890_Regression_Test.cpp:
        * tests/Bug_2540_Regression_Test.cpp:
        * tests/Bug_2609_Regression_Test.cpp:
        * tests/Bug_2659_Regression_Test.cpp:
        * tests/Bug_2912_Regression_Test.cpp:
        * tests/CE_fostream.cpp:
        * tests/Conn_Test.cpp:
        * tests/Dev_Poll_Reactor_Test.cpp:
        * tests/Dynamic_Test.cpp:
        * tests/FlReactor_Test.cpp:
        * tests/Future_Set_Test.cpp:
        * tests/Future_Test.cpp:
        * tests/High_Res_Timer_Test.cpp:
        * tests/IOStream_Test.cpp:
        * tests/Log_Msg_Backend_Test.cpp:
        * tests/Logging_Strategy_Test.cpp:
        * tests/MT_Reference_Counted_Event_Handler_Test.cpp:
        * tests/Malloc_Test.cpp:
        * tests/Manual_Event_Test.cpp:
        * tests/Message_Block_Test.cpp: